--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ repository = "https://github.com/eukap/itemops"
 readme = "README.md"
 keywords = ["itemops", "slices", "sum items", "multiply with a step"]
 license = "MIT"
+exclude = ["tests/*"]
 
 [dependencies]
