--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "itemops"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["eukap"]
 edition = "2018"
 description = "Provides some operations on items of slices"
 repository = "https://github.com/eukap/itemops"
 readme = "README.md"
+keywords = ["slice", "vector", "array", "sum", "product"]
+categories = ["algorithms"]
 license = "MIT"
 exclude = ["tests/*"]
 
